syntax = "proto3";

message SignUpRequest {
    string email = 1;
    string name = 2;
    string password = 3;
}
message SignUpParams {
    string email = 1;
    string name = 2;
    string password = 3;
}
message SignUpResponse {
    bool name = 1;
    string email = 2;
}
